--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
     <p><strong>Constructing narratives that shift perception, inspire belief, and create movement.</strong></p>
 
-    <p>We work with founders and companies to make sure the principles behind what they are building, and why, are well communicated.</p>
+    <p>We work with founders and companies to make sure the principles behind what they are building, and why, are well articulated</p>
 
     <p><strong>This includes:</strong></p>
     <ul>
@@ -226,3 +226,4 @@
 
 </body>
 </html>
+
