--- a/our-narrative.html
+++ b/our-narrative.html
@@ -160,7 +160,7 @@
 
   <p>The craft of story begins at the level of principles: what is held to be true, what is valued, and what the work ultimately answers to. From there, structure and language follow.</p>
 
-  <p>When narrative is unclear, people still speak, write, and share—but they do so inconsistently. Language shifts depending on who is speaking. Ideas are simplified in the wrong places. Meaning fractures as it moves.</p>
+  <p>When narrative is unclear, people still speak, write, and share, but they do so inconsistently. Language shifts depending on who is speaking. Ideas are conveyed in the wrong ways at times. Meaning fractures as it moves.</p>
 
   <hr class="divider">
 
@@ -168,7 +168,7 @@
 
   <p>Humans do not experience the world as isolated facts. We understand reality through patterns, interpretation, and causality. Narrative is the structure that holds those together.</p>
 
-  <p>Historically, stories were how knowledge survived—moving across time and generations without being lost. Narrative remains the primary way complex ideas are understood, remembered, and acted upon.</p>
+  <p>Since the beginning of humanity, stories were how knowledge survived, moving across time and generations without being lost. Narrative remains the primary way complex ideas are understood, remembered, and acted upon.</p>
 
   <hr class="divider">
 
@@ -181,7 +181,7 @@
   <p>The work happens earlier:</p>
   <p>forming the narrative itself,<br>
      refining the idea,<br>
-     and shaping the worldview that will eventually be expressed.</p>
+     and shaping the worldview that will be expressed.</p>
 
   <hr class="divider">
 
@@ -193,7 +193,7 @@
 
   <p>This work is governed by knowledge: understanding the industry, the technology, and the product deeply enough that the narrative reflects how things actually function, and not just how they are marketed.</p>
 
-  <p>Clear language comes from clear thinking.</p>
+  <p>Clear language comes from clear thinking. And clear thinking can never be automated</p>
 
   <hr class="divider">
 
@@ -201,11 +201,7 @@
 
   <p>The work is writing-led and thinking-intensive.</p>
 
-  <p>It centers on the careful construction of language rather than volume, velocity, or surface polish. The goal is coherence—between belief, language, and action.</p>
-
-  <p><strong>Less branding.<br>
-     Less comms.<br>
-     More meaning.</strong></p>
+  <p>It centers on the careful construction of language rather than quantity or speed. The goal is coherence between belief, language, and action.</p>
 
   <hr class="divider">
 
