--- a/index.html
+++ b/index.html
@@ -5,344 +5,109 @@
   <title>Golden Parable</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Fonts -->
+  <!-- Garamond -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,350;9..144,450;9..144,600&family=Inter:wght@350;450;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600&display=swap" rel="stylesheet">
 
   <style>
     :root{
-      --paper:#F3EEE4;
-      --paper-2:#EFE7D8;
-      --ink:#17151a;
-      --muted:rgba(23,21,26,.68);
+      --paper:#F2E9D8;
+      --paper-dark:#E7D8BF;
+      --ink:#1b1716;
+      --muted:rgba(27,23,22,.65);
       --accent:#2E1B3A;
-      --gold:#D8B35D;
       --max:1080px;
-      --edge:rgba(0,0,0,.16);
     }
 
     *{ box-sizing:border-box; }
 
     body{
       margin:0;
+      font-family:"EB Garamond", Garamond, "Adobe Garamond Pro", serif;
       color:var(--ink);
+      line-height:1.55;
       background:
-        radial-gradient(1200px 900px at 20% 10%, rgba(0,0,0,.04), transparent 55%),
-        radial-gradient(1000px 700px at 80% 20%, rgba(46,27,58,.05), transparent 60%),
-        linear-gradient(180deg, var(--paper), var(--paper-2));
-      font-family:Inter,system-ui,sans-serif;
-      line-height:1.6;
+        radial-gradient(1200px 900px at 18% 10%, rgba(0,0,0,.08), transparent 55%),
+        radial-gradient(900px 700px at 80% 20%, rgba(46,27,58,.06), transparent 60%),
+        linear-gradient(180deg, var(--paper), var(--paper-dark));
     }
 
-    /* Paper grain */
+    /* paper grain */
     body::before{
       content:"";
       position:fixed;
       inset:0;
       pointer-events:none;
-      opacity:.16;
+      opacity:.25;
       mix-blend-mode:multiply;
-      background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='260' height='260'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.85' numOctaves='3'/%3E%3C/filter%3E%3Crect width='260' height='260' filter='url(%23n)' opacity='.35'/%3E%3C/svg%3E");
+      background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='320' height='320'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.75' numOctaves='4'/%3E%3C/filter%3E%3Crect width='320' height='320' filter='url(%23n)' opacity='.45'/%3E%3C/svg%3E");
     }
 
-    /* Subtle vignette */
+    /* darkened edges */
     body::after{
       content:"";
       position:fixed;
       inset:0;
       pointer-events:none;
-      background:radial-gradient(1200px 900px at 50% 30%, transparent 40%, rgba(0,0,0,.12));
-      opacity:.35;
+      background:radial-gradient(1100px 800px at 50% 35%, transparent 38%, rgba(0,0,0,.25));
+      opacity:.45;
     }
 
     header{
       position:fixed;
-      top:0;left:0;right:0;
+      top:0; left:0; right:0;
       display:flex;
       justify-content:space-between;
       align-items:center;
       padding:1rem 1.5rem;
-      background:rgba(243,238,228,.78);
-      backdrop-filter:blur(10px);
-      border-bottom:1px solid rgba(0,0,0,.10);
+      background:rgba(242,233,216,.75);
+      backdrop-filter:blur(8px);
+      border-bottom:1px solid rgba(0,0,0,.14);
       z-index:10;
     }
 
-    /* Placeholder logo */
-    .brand{
-      display:flex;
-      align-items:center;
-      gap:.9rem;
-    }
-
-    .mark{
-      width:38px;height:38px;
-      border:1px solid rgba(0,0,0,.24);
-      border-radius:999px;
-      position:relative;
-      background:rgba(255,255,255,.14);
-      box-shadow:0 8px 18px rgba(0,0,0,.10);
-    }
-    .mark::before{
-      content:"";
-      position:absolute;
-      inset:8px;
-      border:1px dashed rgba(46,27,58,.35);
-      border-radius:999px;
-      transform:rotate(-8deg);
-    }
-
     .brand-title{
-      font-family:Fraunces,serif;
+      font-size:1rem;
+      letter-spacing:.16em;
       text-transform:uppercase;
-      letter-spacing:.14em;
-      font-size:.95rem;
-      line-height:1;
-      color:var(--ink);
       text-decoration:none;
-      text-shadow:0 1px 0 rgba(255,255,255,.35);
+      color:var(--ink);
     }
 
     nav a{
-      margin-left:1.1rem;
+      margin-left:1.2rem;
       font-size:.82rem;
+      letter-spacing:.18em;
       text-transform:lowercase;
-      letter-spacing:.16em;
       color:var(--accent);
       text-decoration:none;
-      position:relative;
-      padding:.25rem .1rem;
     }
-    nav a::after{
-      content:"";
-      position:absolute;
-      left:0; right:0; bottom:-3px;
-      height:1px;
-      background:rgba(46,27,58,.35);
-      transform:scaleX(0);
-      transform-origin:left;
-      transition:.22s ease;
-    }
-    nav a:hover::after{ transform:scaleX(1); }
 
     main{
       max-width:var(--max);
       margin:0 auto;
-      padding:6.7rem 1.4rem 4rem;
-      position:relative;
-      z-index:1; /* above vignette */
-    }
-
-    /* Vintage “page” feel */
-    .page{
-      border:1px solid var(--edge);
-      box-shadow:0 18px 48px rgba(0,0,0,.14);
-      background:rgba(243,238,228,.72);
-      padding:1.6rem;
-    }
-
-    .hero-grid{
-      display:grid;
-      grid-template-columns:1.05fr 1.45fr;
-      gap:1.6rem;
-      align-items:start;
-    }
-
-    /* Old-school section label */
-    .section-label{
-      font-family:Fraunces,serif;
-      text-transform:uppercase;
-      letter-spacing:.22em;
-      font-size:.72rem;
-      color:rgba(23,21,26,.75);
-      margin-bottom:.8rem;
-      display:inline-flex;
-      align-items:center;
-      gap:.6rem;
-    }
-    .section-label::before{
-      content:"";
-      width:34px;
-      height:1px;
-      background:rgba(0,0,0,.22);
-      display:inline-block;
-    }
-
-    /* NEW tagline */
-    .tagline{
-      font-family:Fraunces,serif;
-      font-size:clamp(2.1rem, 4vw, 3.4rem);
-      line-height:1.06;
-      text-transform:uppercase;
-      letter-spacing:.03em;
-      text-shadow:0 1px 0 rgba(255,255,255,.35);
-    }
-    .tagline .line{
-      display:block;
-      margin:.18em 0; /* spacing between lines */
-    }
-
-    .hero-art-wrap{
-      position:relative;
-      border:1px solid rgba(0,0,0,.18);
-      box-shadow:0 18px 48px rgba(0,0,0,.16);
-      cursor:pointer;
-      background:rgba(255,255,255,.12);
-    }
-
-    .hero-art-wrap img{
-      width:100%;
-      display:block;
-      max-height:560px;
-      object-fit:cover;
-      filter:saturate(.92) contrast(.98);
-    }
-
-    .hero-art-hover{
-      position:absolute;
-      inset:0;
-      background:linear-gradient(180deg,rgba(15,23,42,.10),rgba(15,23,42,.92));
-      color:#F3EEE4;
-      padding:1.2rem;
-      display:flex;
-      align-items:flex-end;
-      font-size:.85rem;
-      opacity:0;
-      transition:.25s ease;
-    }
-
-    .hero-art-wrap:hover .hero-art-hover{ opacity:1; }
-
-    .hero-art-caption{
-      font-size:.85rem;
-      font-style:italic;
-      margin-top:.55rem;
-      color:var(--muted);
-    }
-
-    .hero-copy{
-      margin-top:1.8rem;
-      max-width:72ch;
-      border-top:1px solid rgba(0,0,0,.14);
-      padding-top:1.4rem;
-    }
-
-    .hero-pill{
-      font-size:.72rem;
-      letter-spacing:.18em;
-      text-transform:uppercase;
-      margin-bottom:.7rem;
-      color:rgba(23,21,26,.8);
-    }
-
-    .lede{
-      font-family:Fraunces,serif;
-      font-size:1.05rem;
-      line-height:1.65;
-      color:rgba(23,21,26,.86);
-    }
-
-    ul{
-      margin:.4rem 0 1.1rem 1.1rem;
-    }
-
-    footer{
-      max-width:var(--max);
-      margin:0 auto;
-      padding:0 1.4rem 2.5rem;
-      font-size:.9rem;
-      color:var(--muted);
+      padding:6.8rem 1.4rem 4rem;
       position:relative;
       z-index:1;
     }
 
-    @media(max-width:900px){
-      .hero-grid{ grid-template-columns:1fr; }
-      header{ padding:1rem 1.1rem; }
+    .hero-grid{
+      display:grid;
+      grid-template-columns:1.1fr 1.4fr;
+      gap:1.6rem;
+      align-items:start;
     }
-  </style>
-</head>
 
-<body>
+    /* HERO TAGLINE */
+    .tagline{
+      font-size:clamp(2.4rem, 4.6vw, 3.6rem);
+      line-height:1.08;
+      text-transform:uppercase;
+      letter-spacing:.04em;
+    }
 
-<header>
-  <div class="brand">
-    <div class="mark" aria-hidden="true"></div>
-    <a class="brand-title" href="index.html">Golden Parable</a>
-  </div>
-
-  <nav>
-    <a href="index.html">home</a>
-    <a href="about.html">about</a>
-    <a href="our-narrative.html">our narrative</a>
-  </nav>
-</header>
-
-<main>
-  <div class="page">
-
-    <section class="hero-grid">
-
-      <div>
-        <div class="section-label">About</div>
-
-        <!-- UPDATED TAGLINE -->
-        <div class="tagline" aria-label="Define, Craft, Refine, Carry Meaning">
-          <span class="line">Define,</span>
-          <span class="line">Craft,</span>
-          <span class="line">Refine,</span>
-          <span class="line">Carry Meaning</span>
-        </div>
-      </div>
-
-      <div>
-        <div class="hero-art-wrap">
-          <img src="fairytale.jpeg" alt="Fairy Tale of Kings">
-          <div class="hero-art-hover">
-            <div>
-              <strong>Fairy Tale of Kings — M.K. Čiurlionis (1909)</strong><br>
-              Two figures hold a glowing world between them — a quiet exchange of meaning.
-            </div>
-          </div>
-        </div>
-        <div class="hero-art-caption">
-          <em>Fairy Tale of Kings</em>, 1909 — Čiurlionis
-        </div>
-      </div>
-
-    </section>
-
-    <section class="hero-copy" id="about">
-      <div class="hero-pill">Golden Parable</div>
-
-      <p class="lede">Golden Parable exists to help people define, craft, improve, and tailor their stories.</p>
-
-      <p><strong>Constructing narratives that shift perception, inspire belief, and create movement.</strong></p>
-
-      <p>We work with founders and companies to make sure the principles behind what they are building, and why, are well articulated.</p>
-
-      <p><strong>This includes:</strong></p>
-      <ul>
-        <li>defining the worldview a founder or company is expressing</li>
-        <li>clarifying intention, not just content and messaging</li>
-        <li>determining how to connect the narrative to action, so the story is lived and felt across product, culture, and brand</li>
-      </ul>
-
-      <p>In <em>Fairy Tale of Kings</em>, meaning is passed hand to hand as a shared, glowing world.</p>
-
-      <p><strong>Golden Parable works in that same moment—</strong><br>
-      when an internal world becomes visible,<br>
-      understood,<br>
-      and able to be shared.</p>
-    </section>
-
-  </div>
-</main>
-
-<footer>
-  © Golden Parable
-</footer>
-
-</body>
-</html>
+    .tagline span{
+      display:block;
+      margin:.22em 0;
+    }
