--- a/about.html
+++ b/about.html
@@ -5,26 +5,32 @@
   <title>About — Golden Parable</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <!-- Garamond -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,500&family=EB+Garamond:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600&display=swap" rel="stylesheet">
 
   <style>
     :root{
-      --paper:#F2EDE2;
-      --ink:#1B1916;
-      --muted:rgba(27,25,22,.6);
-      --hair:rgba(27,25,22,.18);
+      --paper:#F2E9D8;
+      --paper-dark:#E7D8BF;
+      --ink:#1b1716;
+      --muted:rgba(27,23,22,.65);
+      --accent:#2E1B3A;
       --max:1080px;
     }
 
     *{ box-sizing:border-box; }
+
     body{
       margin:0;
-      font-family:"EB Garamond", serif;
+      font-family:"EB Garamond", Garamond, "Adobe Garamond Pro", serif;
       color:var(--ink);
-      background:var(--paper);
-      line-height:1.65;
+      line-height:1.62;
+      background:
+        radial-gradient(1200px 900px at 18% 10%, rgba(0,0,0,.08), transparent 55%),
+        radial-gradient(900px 700px at 80% 20%, rgba(46,27,58,.06), transparent 60%),
+        linear-gradient(180deg, var(--paper), var(--paper-dark));
     }
 
     body::before{
@@ -34,9 +40,7 @@
       pointer-events:none;
       opacity:.25;
       mix-blend-mode:multiply;
-      background-image:
-        url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='320' height='320'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.7' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='320' height='320' filter='url(%23n)' opacity='.32'/%3E%3C/svg%3E");
-      background-size:320px 320px;
+      background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='320' height='320'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.75' numOctaves='4'/%3E%3C/filter%3E%3Crect width='320' height='320' filter='url(%23n)' opacity='.45'/%3E%3C/svg%3E");
     }
 
     body::after{
@@ -44,97 +48,90 @@
       position:fixed;
       inset:0;
       pointer-events:none;
-      opacity:.22;
-      background:
-        radial-gradient(circle at 20% 15%, rgba(0,0,0,.2), transparent 55%),
-        radial-gradient(circle at 85% 80%, rgba(0,0,0,.18), transparent 60%);
+      background:radial-gradient(1100px 800px at 50% 35%, transparent 38%, rgba(0,0,0,.25));
+      opacity:.45;
     }
 
     header{
-      padding:1rem 1.35rem;
-      border-bottom:1px solid rgba(27,25,22,.08);
-      background:rgba(242,237,226,.78);
-      position:sticky;
-      top:0;
-      backdrop-filter:blur(10px);
+      position:fixed;
+      top:0; left:0; right:0;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      padding:1rem 1.5rem;
+      background:rgba(242,233,216,.75);
+      backdrop-filter:blur(8px);
+      border-bottom:1px solid rgba(0,0,0,.14);
       z-index:10;
     }
 
-    .header-inner{
-      max-width:var(--max);
-      margin:0 auto;
-      display:flex;
-      justify-content:space-between;
-      align-items:baseline;
-      gap:1rem;
+    .brand-title{
+      font-size:1rem;
+      letter-spacing:.16em;
+      text-transform:uppercase;
+      text-decoration:none;
+      color:var(--ink);
     }
 
-    .logo{
-      font-family:Fraunces, serif;
-      text-transform:uppercase;
+    nav a{
+      margin-left:1.2rem;
+      font-size:.82rem;
       letter-spacing:.18em;
-      font-size:.75rem;
-      display:inline-flex;
-      align-items:center;
-      gap:.55rem;
-      color:rgba(27,25,22,.92);
+      text-transform:lowercase;
+      color:var(--accent);
       text-decoration:none;
     }
-    .logo::before{
-      content:"";
-      width:9px;
-      height:9px;
-      border-radius:999px;
-      background:rgba(27,25,22,.7);
-      display:inline-block;
-      transform: translateY(-1px);
-    }
-
-    a{ color:var(--ink); }
-    a:hover{ text-decoration:underline; }
 
     main{
       max-width:var(--max);
       margin:0 auto;
-      padding:2.2rem 1.35rem 4rem;
+      padding:6.8rem 1.4rem 4rem;
       position:relative;
       z-index:1;
     }
 
     h1{
-      font-family:Fraunces, serif;
-      text-transform:uppercase;
-      letter-spacing:.10em;
-      font-weight:500;
-      font-size:1.55rem;
       margin:0 0 1.2rem;
+      font-size:clamp(2rem, 3.4vw, 2.7rem);
+      line-height:1.05;
+      text-transform:uppercase;
+      letter-spacing:.08em;
+      color:var(--accent);
     }
 
     .about-photo{
-      width:240px;
+      width:min(260px, 70vw);
       height:auto;
       border-radius:18px;
       display:block;
-      margin:0 auto 1.8rem;
-      box-shadow:0 14px 34px rgba(0,0,0,0.12);
-      border:1px solid rgba(27,25,22,.10);
+      margin:0 0 1.6rem;
+      box-shadow:0 14px 34px rgba(0,0,0,0.14);
+      border:1px solid rgba(0,0,0,.16);
       background: rgba(255,255,255,.08);
     }
 
     .copy{
       max-width:74ch;
-      font-size:1.15rem;
+      font-size:1.18rem;
     }
+
     .copy p{ margin:1rem 0; }
 
+    .subtle-rule{
+      border:none;
+      border-top:1px solid rgba(0,0,0,.18);
+      margin:1.8rem 0 1.4rem;
+      width:min(520px, 100%);
+    }
+
     footer{
-      margin-top:4rem;
-      text-align:center;
-      font-family:Fraunces, serif;
-      font-size:.7rem;
-      letter-spacing:.22em;
-      text-transform:uppercase;
+      max-width:var(--max);
+      margin:0 auto;
+      padding:0 1.4rem 2.5rem;
+      font-size:.9rem;
       color:var(--muted);
+      position:relative;
+      z-index:1;
     }
   </style>
 </head>
@@ -142,16 +139,20 @@
 <body>
 
 <header>
-  <div class="header-inner">
-    <a class="logo" href="index.html">Golden Parable</a>
-    <a href="index.html">← back</a>
-  </div>
+  <a href="index.html" class="brand-title">Golden Parable</a>
+  <nav>
+    <a href="index.html">home</a>
+    <a href="about.html">about</a>
+    <a href="our-narrative.html">our narrative</a>
+  </nav>
 </header>
 
 <main>
   <h1>About</h1>
 
   <img src="about.jpeg" alt="Janya portrait" class="about-photo" />
+
+  <hr class="subtle-rule" />
 
   <div class="copy">
     <p>I’m Janya — a poet, data expert, and writer. Storytelling sits at the center of my work; it’s the thread that connects the two poles of my practice: poetry and data. Poetry moves the inner world, touching people on a visceral, emotional level. Data moves the outer world, shaping systems, decisions, and collective understanding. Together, they teach me how meaning travels — from what is lived to what is measured.</p>
@@ -162,11 +163,15 @@
 
     <p>I also write for Letterbrace, a technical literature company, and help founders and teams craft narratives through Golden Parable.</p>
 
-    <p>You can explore my creative portfolio here: <a href="https://janya.netlify.app" target="_blank" rel="noopener">janya.netlify.app</a></p>
+    <p>You can explore my creative portfolio here:
+      <a href="https://janya.netlify.app" target="_blank" rel="noopener">janya.netlify.app</a>
+    </p>
   </div>
-
-  <footer>Golden Parable</footer>
 </main>
+
+<footer>
+  © Golden Parable
+</footer>
 
 </body>
 </html>
