--- a/our-narrative.html
+++ b/our-narrative.html
@@ -142,3 +142,57 @@
     <a href="our-narrative.html">our narrative</a>
   </nav>
 </header>
+
+<main>
+  <h1>Our Narrative</h1>
+
+  <h2>What is a narrative?</h2>
+  <p>By narrative, we mean the underlying logic that gives ideas meaning, coherence, and direction.</p>
+  <p>Narrative operates at a deeper level than copy. It shapes how meaning is formed and how ideas are allowed to travel—both internally, within an organization, and externally, into the world.</p>
+  <p>The craft of story begins at the level of principles: what is held to be true, what is valued, and what the work ultimately answers to. From there, structure and language follow.</p>
+  <p>When narrative is unclear, people still speak, write, and share, but they do so inconsistently. Language shifts depending on who is speaking. Ideas are conveyed in the wrong ways at times. Meaning fractures as it moves.</p>
+
+  <hr class="divider">
+
+  <h2>Why narratives?</h2>
+  <p>Humans do not experience the world as isolated facts. We understand reality through patterns, interpretation, and causality. Narrative is the structure that holds those together.</p>
+  <p>Since the beginning of humanity, stories were how knowledge survived, moving across time and generations without being lost. Narrative remains the primary way complex ideas are understood, remembered, and acted upon.</p>
+
+  <hr class="divider">
+
+  <h2>Storycraft beyond ornamentation</h2>
+  <p>Most organizations treat storytelling as something decorative—layered on once the “real work” is finished.</p>
+  <p>Stories do matter. They are how narratives become legible, memorable, and shareable. But Golden Parable is not focused on retrofitting stories onto completed products or ideas.</p>
+  <p>The work happens earlier:<br>
+     forming the narrative itself,<br>
+     refining the idea,<br>
+     and shaping the worldview that will be expressed.</p>
+
+  <hr class="divider">
+
+  <h2>Anti-slop</h2>
+  <p>By slop, we mean generic, AI-flattened language—writing that sounds polished but carries no thinking behind it.</p>
+  <p>Golden Parable treats writing as a craft. It requires reading, research, refinement, and judgment.</p>
+  <p>This work is governed by knowledge: understanding the industry, the technology, and the product deeply enough that the narrative reflects how things actually function, and not just how they are marketed.</p>
+  <p>Clear language comes from clear thinking. And clear thinking can never be automated.</p>
+
+  <hr class="divider">
+
+  <h2>How Golden Parable approaches the work</h2>
+  <p>The work is writing-led and thinking-intensive.</p>
+  <p>It centers on the careful construction of language rather than quantity or speed. The goal is coherence between belief, language, and action.</p>
+
+  <hr class="divider">
+
+  <h2>Who is behind Golden Parable</h2>
+  <p>I am Janya.</p>
+  <p>I am a writer and poet. I have worked in technical teams, building the systems that power organizations and the stories that help people understand them.</p>
+  <p>Golden Parable comes from that intersection.</p>
+</main>
+
+<footer>
+  © Golden Parable
+</footer>
+
+</body>
+</html>
